--- a/clusters/localhost/install/kustomization.yaml
+++ b/clusters/localhost/install/kustomization.yaml
@@ -1,15 +1,20 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: wac-hospital  # chceme tieto objekty umiestniť do `wac-hospital` namespace
-                         # tento zapis preťaží hodnoty "namespace" vo všetkých objektoch
-
+namespace:
+  wac-hospital # chceme tieto objekty umiestniť do `wac-hospital` namespace
+  # tento zapis preťaží hodnoty "namespace" vo všetkých objektoch
 
 commonLabels:
   app.kubernetes.io/part-of: wac-hospital
 
 resources:
-- ../../../apps/xbalcercik-ambulance-ufe
+  - ../../../apps/xbalcercik-ambulance-ufe
+    - ../../../apps/xbalcercik-ambulance-webapi
 
 components:
- - ../../../components/version-developers
+  - ../../../components/version-developers
+  - https://github.com/rastislav-balcercik/reko-webapi//deployments/kustomize/components/mongodb
+
+patches:
+  - path: patches/ambulance-webapi.service.yaml
