--- a/components/version-release/kustomization.yaml
+++ b/components/version-release/kustomization.yaml
@@ -1,24 +1,27 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 images:
-- name: rbalcercik/reko-ufe
-  newName: rbalcercik/reko-ufe
-  newTag: 1.0.0  #aktuálna verzia docker obrazu, ktorú chcete aby používatelia - cvičiaci - videli nasadenú
+  - name: rbalcercik/reko-ufe
+    newName: rbalcercik/reko-ufe
+    newTag: 1.2.0 #aktuálna verzia docker obrazu, ktorú chcete aby používatelia - cvičiaci - videli nasadenú
+  - name: rbalcercik/reko-wl-webapi
+    newName: rbalcercik/reko-wl-webapi
+    newTag: 1.1.0
 
 replacements:
- - targets:
-   - select:
-         group: fe.milung.eu
-         version: v1
-         kind: WebComponent
-         name: xbalcercik-ambulance-reko
-     fieldPaths:
-         - spec.hash-suffix
-   source:
-     version: v1
-     kind: Deployment
-     name:  xbalcercik-ambulance-ufe-deployment
-     fieldPath: spec.template.spec.containers.0.image
-     options:
-         delimiter: ':'
-         index: 1
+  - targets:
+      - select:
+          group: fe.milung.eu
+          version: v1
+          kind: WebComponent
+          name: xbalcercik-ambulance-reko
+        fieldPaths:
+          - spec.hash-suffix
+    source:
+      version: v1
+      kind: Deployment
+      name: xbalcercik-ambulance-ufe-deployment
+      fieldPath: spec.template.spec.containers.0.image
+      options:
+        delimiter: ":"
+        index: 1
